--- a/app/src/main/res/layout/track_row.xml
+++ b/app/src/main/res/layout/track_row.xml
@@ -5,33 +5,64 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/artist_picture_clipper"
+        android:id="@+id/track_art_clipper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/home_artists_row_artist_picture_margin"
-        android:background="@drawable/artist_profile_picture_background"
+        android:background="@drawable/profile_picture_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/artist_name"
+        app:layout_constraintEnd_toStartOf="@+id/track_and_artist_name_layout"
         app:layout_constraintBottom_toBottomOf="parent" >
 
         <ImageView
-            android:id="@+id/artist_picture"
+            android:id="@+id/track_art"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:contentDescription="@string/artist_picture"/>
+            android:contentDescription="@string/track_art"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/track_and_artist_name_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/track_art_clipper"
+        app:layout_constraintEnd_toStartOf="@id/track_duration"
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+        <TextView
+            android:id="@+id/track_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:ellipsize="end"
+            android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:ellipsize="end"
+            android:maxLines="1" />
+
     </LinearLayout>
 
     <TextView
-        android:id="@+id/artist_name"
-        android:layout_width="0dp"
+        android:id="@+id/track_duration"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/home_artists_row_artist_picture_margin"
+        android:layout_marginStart="@dimen/home_artists_row_artist_picture_margin"
         android:gravity="center"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/artist_picture_clipper"
+        app:layout_constraintStart_toEndOf="@id/track_and_artist_name_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
