--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,7 +31,8 @@
             android:layout_height="wrap_content"
             android:padding="40dp"
             android:gravity="center"
-            android:text="@string/no_internet_message" />
+            android:text="@string/no_internet_message"
+            style="@style/HeaderTextView"/>
 
     </LinearLayout>
 
@@ -63,9 +64,8 @@
                 android:id="@+id/welcome_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/welcome"
-                style="@style/CustomTextView"
+                style="@style/WelcomeTextView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -75,32 +75,38 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
                 android:layout_marginEnd="50dp"
-                android:textSize="30sp"
                 android:textStyle="bold"
                 android:text="@string/home_seller_text"
-                style="@style/CustomTextView"
+                style="@style/HomeSellerTextView"
                 app:layout_constraintTop_toBottomOf="@id/welcome_text"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/profile_picture"/>
+                app:layout_constraintEnd_toStartOf="@id/profile_picture_clipper"/>
 
-            <ImageView
-                android:id="@+id/profile_picture"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+
+            <LinearLayout
+                android:id="@+id/profile_picture_clipper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
+                android:background="@drawable/profile_picture_background"
                 app:layout_constraintTop_toBottomOf="@id/welcome_text"
                 app:layout_constraintStart_toEndOf="@id/home_seller_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:contentDescription="@string/profile_picture" />
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/profile_picture"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:contentDescription="@string/profile_picture" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/trending_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/trending"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/home_seller_text"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -109,9 +115,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/view_more"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/home_seller_text"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -129,9 +134,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/top_artists"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/tracks_list"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -140,9 +144,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/view_more"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/tracks_list"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -160,9 +163,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/top_genre"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/artists_list"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -180,9 +182,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/top_albums"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/genres_list"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -191,9 +192,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_top_margin"
-                android:textSize="@dimen/welcome_text_size"
                 android:text="@string/view_more"
-                style="@style/CustomTextView"
+                style="@style/HeaderTextView"
                 app:layout_constraintTop_toBottomOf="@id/genres_list"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
