--- a/app/src/main/res/layout/home_artists_row.xml
+++ b/app/src/main/res/layout/home_artists_row.xml
@@ -5,15 +5,24 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/artist_picture"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <LinearLayout
+        android:id="@+id/artist_picture_clipper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/artist_profile_picture_background"
         android:layout_margin="@dimen/home_artists_row_artist_picture_margin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/artist_name"/>
+        app:layout_constraintBottom_toTopOf="@id/artist_name" >
+
+        <ImageView
+            android:id="@+id/artist_picture"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="@string/artist_picture"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/artist_name"
@@ -22,10 +31,9 @@
         android:gravity="center"
         android:ellipsize="end"
         android:maxLines="2"
-        app:layout_constraintTop_toBottomOf="@id/artist_picture"
+        app:layout_constraintTop_toBottomOf="@id/artist_picture_clipper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
