--- a/app/src/main/res/layout/track_details_header.xml
+++ b/app/src/main/res/layout/track_details_header.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <LinearLayout
-        android:id="@+id/album_art_clipper"
-        android:layout_width="wrap_content"
+        android:id="@+id/top_40_tracks_art_clipper"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/profile_picture_background"
-        android:layout_margin="@dimen/home_artists_row_album_art_margin"
+        android:layout_margin="@dimen/standard_top_margin"
+        android:contentDescription="@string/top_40_tracks_art"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/album_name" >
+        app:layout_constraintEnd_toEndOf="parent" >
 
         <ImageView
-            android:id="@+id/album_art"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/album_art"/>
+            android:id="@+id/top_40_tracks_art"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:contentDescription="@string/top_40_track_art"/>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/album_name"
+        android:id="@+id/top_40_tracks_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:maxLines="2"
-        app:layout_constraintTop_toBottomOf="@id/album_art_clipper"
+        android:layout_margin="@dimen/standard_top_margin"
+        app:layout_constraintTop_toBottomOf="@id/top_40_tracks_art_clipper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
