--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="toolbar_text_size">18dp</dimen>
+    <dimen name="toolbar_text_size">20dp</dimen>
     <dimen name="general_padding">20dp</dimen>
     <dimen name="welcome_text_size">20sp</dimen>
     <dimen name="standard_top_margin">20dp</dimen>
@@ -11,4 +11,5 @@
     <dimen name="home_artists_row_album_art_margin">20dp</dimen>
     <dimen name="separator_view_edge_margin">20dp</dimen>
     <dimen name="fragment_header_padding">20dp</dimen>
+    <dimen name="profile_picture_background_radius">10dp</dimen>
 </resources>
