--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,12 +13,43 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <!-- Colors -->
+        <item name="defaultColor">@color/white</item>
+        <item name="defaultColorSecondary">#F9F9FB</item>
         <item name="defaultTextColor">#414141</item>
         <item name="toolbar_color">@color/white</item>
+        <item name="accent_color">#E2374D</item>
+        <item name="separator_view_color">#BFD6D5</item>
+
+        <!-- Toolbar -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <!-- Font -->
+        <item name="android:fontFamily">@font/airbnbcerealbook</item>
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">@dimen/toolbar_text_size</item>
+    </style>
+
+    <style name="WelcomeTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">?defaultTextColor</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <style name="HomeSellerTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">?defaultTextColor</item>
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="HeaderTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">?defaultTextColor</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="FragmentHeaderTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">?defaultTextColor</item>
+        <item name="android:textSize">40sp</item>
     </style>
 
     <style name="CustomTextView" parent="Widget.AppCompat.TextView">
